# FluidFlow

./: BBox.h  CMakeLists.txt  GridManager.cpp  GridManager.h  LICENSE  MyGrid.h  MyScalarBuilder.h  MyVectorBuilder.h  README.md  jetAdapter.h  main.cpp  mathUtils.cpp  mathUtils.h  numUtils.h
builders/: ScalarBuilders.cpp  ScalarBuilders.h  VectorBuilders.cpp  VectorBuilders.h
grids/: CenterScalarGrid.h  CenterVectorGrid.h  CollatedGrid.cpp  CollocatedGrid.h  MACVectorGrid.cpp  MACVectorGrid.h  ScalarGrid.cpp  ScalarGrid.h  VectorGrid.h  VertexVectorGrid.h  VertextScalarGrid.h
solvers/: DiffusionSolver.cpp  DiffusionSolver.h  FluidSolver.cpp  FluidSolver.h  GridFluidSolver.cpp  GridFluidSolver.h  PressureSolver.cpp  PressureSolver.h  SemiLagrangianAdvectSolver.cpp  SemiLagrangianAdvectSolver.h
test/: GridCalcTests.cpp  main.cpp
